# SubPlayer

./: .gitignore  BUILD.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  build.bat  build.ps1  build.sh  go.mod  go.sum  index.html  install.bat  install.sh  main.go  main.js  package-lock.json  package.json  preload.js  pyproject.toml  run.bat  run.sh  setup.bat  setup.sh  subtitle-utils.js  tailwind.config.js  vite.config.ts
docs/: STRUCTURE.md
electron/: main.ts  preload.ts  python-bridge.ts
packaging/: README.md  pyinstaller.spec
player/: ipc_unix.go  ipc_windows.go  mpv.go
python/: audio_mixer.py  process.py  requirements.txt  transcribe.py  translate.py  tts.py
src/: App.tsx  README.md  vite-env.d.ts
src/components/: Controls.tsx  FileUpload.tsx  ProcessingOverlay.tsx  Subtitles.tsx  VideoPlayer.tsx
src/hooks/: useSubtitles.ts
src/main/: main.js
src/renderer/: index.html  renderer.js  styles.css
src/styles/: index.css
subplayer/: __init__.py  app.py
subplayer/media/: __init__.py  mpv_player.py
subplayer/subs/: __init__.py  asr_fasterwhisper.py  asr_whispercpp.py  srt.py
subplayer/translate/: __init__.py  argos.py
subplayer/ui/: __init__.py  main_window.py  mpv_widget.py  settings_dialog.py
subplayer/util/: cache.py  paths.py  settings.py
tools/: bundle_fasterwhisper.md  bundle_ffmpeg.md  bundle_mpv.md  bundle_whispercpp.md
